Fix: 404 error on gh-pages and nav movement
Navigation movement was due to scrollbar adding width to the page.
Adding scrollbar to all pages fixes the movement issue, but
there might be a better way.

Following an example to redirect the site when 404 happens.

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,4 @@
 .home-container {
     background: white; 
+    width: 100%; 
 }
