--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,8 @@
 
 html {
     font-family: 'Montserrat', sans-serif;
+    /* width: 100vw; */
+    overflow-y: scroll;
 }
 
 h1, h2 {
@@ -24,7 +26,14 @@ li>a {
     display: grid; 
     min-height: 100vh; 
     max-height: 100vh;
+    max-width: 100vw;
     grid-template-rows: auto 1fr auto;
+}
+
+.flex {
+    display: flex; 
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 
